--- a/kipsrm-web/app/components/charts/nite.html
+++ b/kipsrm-web/app/components/charts/nite.html
@@ -2,7 +2,8 @@
     <div class="col-md-12">
         <div class="box box-solid">
             <div class="box-header with-border">
-                <h3 class="box-title"><strong>NITE Top 10</strong></h3>
+              <!--   <h3 class="box-title">
+                <strong>NITE Top 10</strong></h3> -->
             </div>
             <div class="box-body">
 
