--- a/kipsrm-web/app/components/recalls/rapex/wordcloud.html
+++ b/kipsrm-web/app/components/recalls/rapex/wordcloud.html
@@ -25,7 +25,7 @@
                                             </tr>
                                             <tr ng-repeat="w in words ">
                                                 <td>{{w.text}}</td>
-                                                <td>{{w.size}}</td>
+                                                <td>{{w.count}}</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -53,7 +53,7 @@
                                             </tr>
                                             <tr ng-repeat="w in words2 ">
                                                 <td>{{w.text}}</td>
-                                                <td>{{w.size}}</td>
+                                                <td>{{w.count}}</td>
                                             </tr>
                                         </tbody>
                                     </table>
