--- a/kipsrm-web/app/components/incidents/nite/iidf.html
+++ b/kipsrm-web/app/components/incidents/nite/iidf.html
@@ -11,8 +11,9 @@
             <p></p>
         </div>
     </div>
+
     <div class="row text-center">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div class="box box-solid" ng-show="showPane=='iidfHm'">
                 <div class="box-body">
                     <a ng-class="showPane=='iidfHm' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfHm'">Hazard vs Motion</a>
@@ -23,27 +24,6 @@
                     <a ng-class="showPane=='iidfAnalysis' ? 'btn-bitbucket' : btn-primary" class="btn btn-primary" ng-click="showPane='iidfAnalysis'">Analysis</a>
                     <hr>
                     <div id="iidfHm">Loading...</div>
-                    <div class="row" ng-if="showHm">
-                        <div class="col-md-12">
-                            <!-- /.box-header -->
-                            <div id="table-wrapper">
-                                <div id="table-scroll">
-                                    <table class="table table-striped">
-                                        <tbody>
-                                            <tr>
-                                                <td><strong>Motion</strong></td>
-                                                <td><strong>Incident</strong></td>
-                                            </tr>
-                                            <tr ng-repeat="result in res">
-                                                <td>{{result}}</td>
-                                                <td>{{result}}</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="box box-solid" ng-show="showPane=='iidfHo'">
@@ -112,4 +92,44 @@
             </div>
         </div>
     </div>
+    <!--
+    <div class="box box-solid box-primary">
+        <div class="box-solid">
+            <div class="box-header with-border">
+                <h3 class="box-title">
+                    Hazard: <strong>xxx</strong><br>
+                    Label: <strong>xxx</strong>
+                </h3>
+                <div class="text-muted">
+                    {{ page === 1 ? "" : "Page " + page + " of "}} <b>{{ nite.stats.hits }}</b> {{'results' | translate}} ({{ nite.stats.tookMillis/100 }} seconds)
+                </div>
+            </div>
+            <div class="box-body table-responsive no-padding">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>{{'annual_number' | translate}}</th>
+                            <th>{{'incident_date' | translate}}</th>
+                            <th>{{'incident_cause' | translate}}</th>
+                            <th>{{'prevention' | translate}}</th>
+                            <th>IIDF</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="item in nite.data">
+                            <td>
+                                <a href="" data-toggle="modal" data-target="#niteModal" ng-click="displayDetailsNite(item.annual_number)">{{item.annual_number}}
+                                        </a>
+                            </td>
+                            <td>{{item.incident_date | date:'medium'}}</td>
+                            <td>({{item.incident_cause_code}}) - {{item.incident_cause}}</td>
+                            <td>{{item.prevention}}</td>
+                            <td><span class="text-muted"><i>IIDF</i></span></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    -->
 </section>
