iidf drill down info for 0 value

--- a/kipsrm-web/app/components/incidents/nite/iidf.html
+++ b/kipsrm-web/app/components/incidents/nite/iidf.html
@@ -11,7 +11,7 @@
             <p></p>
         </div>
     </div>
-    
+
     {{passtest}}
 
     <div class="row text-center">
@@ -94,24 +94,24 @@
             </div>
         </div>
     </div>
-    
+
     <!-- {{iidfRecords.stats}} -->
-    
-    <div class="box box-solid box-primary" ng-if="iidfRecords.data[0].hazard1">
+
+    <div class="box box-solid box-primary" ng-show="iidfRecords.stats.count && showPane=='iidfHm'">
         <div class="box-solid">
             <div class="box-header with-border">
                 <h3 class="box-title">
                     
-                    Hazard: <strong>{{iidfRecords.data[0].hazard1}}</strong><br>
-                    Motion: <strong>{{iidfRecords.data[0].victim_motion}}</strong>
+                    Hazard: <strong>{{xValue}}</strong><br>
+                    Motion: <strong>{{yValue}}</strong>
                 </h3>
                 <div class="text-muted">
-                    <b>{{ iidfRecords.stats.hits }}</b> {{'results' | translate}} ({{ iidfRecords.stats.tookMillis/100 }} seconds)
+                    <b>{{ iidfRecords.stats.hits }}</b> records ({{ iidfRecords.stats.tookMillis/100 }} seconds)
                 </div>
             </div>
             <div class="box-body table-responsive no-padding">
                 <table class="table table-hover">
-                    <thead>
+                    <thead ng-show="iidfRecords.stats.hits">
                         <tr>
                             <th>Age</th>
                             <th>Gender</th>
@@ -121,6 +121,13 @@
                             <th>Location</th>
                         </tr>
                     </thead>
+                    <tbody ng-hide="iidfRecords.stats.hits">
+                        <th>
+                            <p class="alert alert-danger text-center" style="margin: 0 0 0 0;">
+                                <b>No records</b>
+                            </p>
+                        </th>
+                    </tbody>
                     <tbody>
                         <tr ng-repeat="item in iidfRecords.data">
                             <td>{{item.age}}</td>
@@ -135,5 +142,5 @@
             </div>
         </div>
     </div>
-    
+
 </section>
